# victor

./: .bandit  .cspell.json  .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pip-audit-known-vulnerabilities  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  .test_durations  .trivyignore  .victor_diff_e2ec2f32.py  .yamllint.yml  ACTUAL_TEST_STATUS.md  AGENTS.md  AIRGAPPED_GUIDE.md  AIR_GAPPED_TOOL_CALLING_SOLUTION.md  ALL_IMPROVEMENTS_FINAL.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_REFACTORING_COMPLETE.md  ARGUMENT_NORMALIZATION_DESIGN.md  ARGUMENT_NORMALIZATION_IMPLEMENTATION.md  ARXIV_OPTIMIZATION_COMPLETE_ALL_PHASES.md  ARXIV_OPTIMIZATION_COMPLETE_FINAL.md  ARXIV_OPTIMIZATION_DEPLOYMENT_READY.md  ARXIV_OPTIMIZATION_FINAL_REPORT.md  ARXIV_OPTIMIZATION_VERIFICATION.md  AUTHENTICATION_DESIGN_SPEC.md  BRANDING_OPTIONS.md  CHANGELOG.md  CHAT_COORDINATOR_DEPRECATION.md  CHAT_COORDINATOR_TEST_ANALYSIS.md  CHAT_PY_BUGFIX.md  CI_CD_INTEGRATION_COMPLETE.txt  CI_CD_OPTIMIZATION.md  (+280 more)
examples/external_vertical/: README.md  pyproject.toml  victor-vertical.toml
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
rust/.github/workflows/: rust-ci.yml
rust/crates/edge-runtime/: Cargo.toml
rust/crates/protocol/: Cargo.toml
rust/crates/python-bindings/: Cargo.toml
rust/crates/state/: Cargo.toml
rust/crates/tools/: Cargo.toml
rust/signature/: README.md
rust/src/: arg_normalizer.rs  ast_indexer.rs  ast_processor.rs  batch_processor.rs  chunking.rs  classifier.rs  context_fitter.rs  dedup.rs  embedding_ops.rs  embeddings.rs  file_ops.rs  graph_algo.rs  graph_algorithms.rs  hashing.rs  json_repair.rs  lib.rs  regex_engine.rs  sanitizer.rs  secrets.rs  serialization.rs  signature.rs  similarity.rs  streaming_filter.rs  thinking.rs  tool_selector.rs  yaml_loader.rs
rust/tests/benchmark/: test_context_scoring_performance.py
verticals/victor-coding/: README.md  pyproject.toml
verticals/victor-coding/tests/: test_api_router_provider.py  test_coding_vertical_teams.py  test_enhanced_integration.py  test_extension_cache.py  test_framework_lsp_adapter.py
verticals/victor-coding/victor_coding/: __init__.py  assistant.py  codebase_analyzer.py  composed_chains.py  conversation_enhanced.py  escape_hatches.py  handlers.py  middleware.py  plugin.py  safety.py  victor-vertical.toml
verticals/victor-dataanalysis/: README.md  pyproject.toml
verticals/victor-dataanalysis/tests/: test_contract_namespace.py  test_safety.py
verticals/victor-dataanalysis/victor_dataanalysis/: __init__.py  assistant.py  capabilities.py  conversation_enhanced.py  escape_hatches.py  handlers.py  mode_config.py  plugin.py  protocols.py  safety.py  safety_enhanced.py  tool_dependencies.py  victor-vertical.toml
verticals/victor-rag/: README.md  pyproject.toml  setup.py
verticals/victor-rag/examples/: demo_docs.py  demo_sec_filings.py
verticals/victor-rag/tests/: test_contract_namespace.py  test_rag_capabilities.py  test_rag_teams.py  test_rag_workflows.py  test_rl_config.py  test_safety.py
verticals/victor-rag/victor_rag/: __init__.py  assistant.py  capabilities.py  chunker.py  conversation_enhanced.py  demo_sec_filings.py  document_models.py  document_store.py  enrichment.py  escape_hatches.py  handlers.py  mode_config.py  protocols.py  query_enhancer.py  safety.py  safety_enhanced.py  tool_dependencies.py  tool_dependencies.yaml  victor-vertical.toml
verticals/victor-research/: README.md  pyproject.toml
verticals/victor-research/tests/: test_research_handlers.py  test_research_workflows.py  test_safety.py
verticals/victor-research/victor_research/: __init__.py  assistant.py  capabilities.py  conversation_enhanced.py  handlers.py  protocols.py  safety.py  victor-vertical.toml
victor-codegraph/: Makefile  README.md  pyproject.toml
victor-codegraph/tests/: test_adapter.py  test_line_base_contract.py  test_python_parser.py  test_repo.py  test_sizing_and_chunk.py  test_symbol_oid_contract.py  test_symbol_oid_parity.py  test_treesitter_jsts.py
victor-codegraph/victor_codegraph/: __init__.py  adapter.py  config.py  languages.py  model.py  parser.py  python_parser.py  repo.py  sizing.py  treesitter_parser.py
victor-contracts/examples/minimal_vertical/: README.md  __init__.py  capabilities.py  protocols.py  pyproject.toml
victor-sdk/: MIGRATION.md  Makefile  PUBLICATION_STATUS.md  QUICK_START.md  README.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  VERTICAL_DEVELOPMENT.md  pyproject.toml
victor-sdk/examples/minimal_vertical/: README.md  __init__.py  protocols.py  pyproject.toml  validators.py
victor-sdk/tests/e2e/: test_zero_dependency_vertical.py
victor-sdk/tests/unit/: test_api_version.py  test_capability_privacy_helpers.py  test_capability_requirements.py  test_config_protocols.py  test_contracts_alias.py  test_conversation_contracts.py  test_discovery.py  test_discovery_enhanced.py  test_discovery_single_scan.py  test_enrichment_middleware_adapters.py  test_extension_manifest.py  test_manifest_validation.py  test_mock_plugin_context.py  test_mode_config_provider.py  test_multi_agent_contracts.py  test_plugin_context_protocol.py  test_prompt_workflow_metadata.py  test_protocols.py  test_registries.py  test_rl_contracts.py  test_runtime_adapter_exports.py  test_runtime_capabilities.py  test_safety_contracts.py  test_safety_framework.py  test_safety_host_adapters.py  (+15 more)
victor-sdk/victor_contracts/: __init__.py
victor-sdk/victor_sdk/: __init__.py  agent_spec_runtime.py  capability_runtime.py  chain_runtime.py  cli.py  discovery.py  enrichment_runtime.py  graph_runtime.py  handler_runtime.py  init_runtime.py  lsp_runtime.py  middleware_runtime.py  multi_agent.py  processing_runtime.py  protocols.py  provider_runtime.py  rl.py  rl_runtime.py  safety_patterns.py  safety_policy.py  search_runtime.py  subagent_runtime.py  team_schema.py  tool_runtime.py  validation.py  workflow_executor_runtime.py  workflow_runtime.py  workflows.py
(+9278 files in other folders)
