# Copyright 2025 Vijaykumar Singh <singhvjd@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victor-ai"
version = "0.7.0"
description = "Open-source agentic AI framework with multi-provider support, workflow orchestration, and extensible tool system"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vijaykumar Singh", email = "singhvjd@gmail.com"}
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "llm",
    "coding-agent",
    "victor",
    "anthropic",
    "openai",
    "ollama",
    "claude",
    "gpt",
    "cli",
    "terminal"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "victor-sdk>=0.6.0,<1.0",  # SDK protocol definitions (independent semver)
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typing-extensions>=4.9",  # For typing.Self on Python 3.10

    # Async
    "httpx>=0.27",
    "aiofiles>=23.0",
    "aiohttp>=3.9",

    # CLI/UI
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "textual>=0.89",

    # LLM Providers (core - always installed)
    "anthropic>=0.34",
    "openai>=1.40",
    # Google Gemini support uses the optional google-genai extra.

    # Tools
    "gitpython>=3.1",
    "jsonschema>=4.20",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Code Analysis (core) — base library only; language grammars are optional
    "tree-sitter>=0.23",  # 0.23+ required for QueryCursor API
    "pygments>=2.17",

    # Caching
    "cachetools>=5.3",
    "diskcache>=5.6",
    "docker>=7.0",
    "docstring-parser>=0.15",
    "psutil>=5.9",  # System metrics for observability and health monitoring

]

[project.optional-dependencies]
# Semantic embeddings: tool selection, conversation embeddings, codebase search
embeddings = [
    "numpy>=1.24",  # Required by victor.storage.embeddings.service
    "sentence-transformers>=2.2.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0",
]

# LangChain interop: adapt LangChain tools as native Victor tools
langchain = [
    "langchain-core>=0.2.0",
]

# Interactive examples and playground (typer, rich already in main deps)
examples = []

dev = [
    # Embeddings (required for full test coverage)
    "numpy>=1.24",  # Required by victor.storage.embeddings.service
    "sentence-transformers>=2.2.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0",
    # Fuzzy matching for robust classification
    "Levenshtein>=0.25.1",  # Fast C implementation for typo tolerance
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-json-report>=1.5.0",
    "pytest-benchmark>=5.0",  # For performance tests
    "aiosqlite>=0.19",  # For SQLite async operations in tests

    "respx>=0.21",
    "pandas>=2.0",  # For data analysis handler tests

    # Linting/Formatting
    "ruff>=0.5",
    "mypy>=1.10",
    "black==26.1.0",

    # Code complexity analysis
    "radon>=6.0",

    # Type stubs
    "types-pyyaml",
    "types-aiofiles",

    # Integration test dependencies
    "strawberry-graphql[fastapi]>=0.243",  # For GraphQL API integration tests
    "tomli>=2.0; python_version < '3.11'",
]

# CI/CD dependencies - includes all testing, linting, and build tools
ci = [
    # Embeddings and optional runtime surfaces exercised in unit tests
    "numpy>=1.24",
    "sentence-transformers>=2.2.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0",

    # Core test dependencies
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-json-report>=1.5.0",
    "pytest-benchmark>=5.0",
    "respx>=0.21",
    "pandas>=2.0",
    "scipy>=1.10",

    # Linting/Formatting/Typing
    "ruff>=0.5",
    "mypy>=1.10",
    "black==26.1.0",
    "radon>=6.0",
    "types-pyyaml",
    "types-aiofiles",

    # Additional CI-specific tools
    "pytest-split>=0.8",
    "tomli>=2.0; python_version < '3.11'",

    # Build tools
    "build>=0.10",
    "wheel>=0.42",
    "twine>=4.0",

    # API and integration dependencies
    "strawberry-graphql[fastapi]>=0.243",
    "codecov>=2.1",

    # Pre-commit hooks
    "pre-commit>=3.5",
    "bandit>=1.7",
    "detect-secrets>=1.4",

    # Documentation validation
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

sphinx-docs = [
    # Sphinx documentation framework
    "sphinx>=7.0.0",
    # Sphinx extensions
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinxcontrib-apidoc>=0.5.0",
    # Napoleon for Google/NumPy style docstrings
    "sphinx-napoleon>=0.9",
    # Additional Sphinx extensions
    "sphinx-viewcode>=2.0",
    "sphinx-intersphinx>=2.0",
    "sphinx-duration>=0.2",
    "sphinx-doctest>=1.0",
    "sphinx-coverage>=2.0",
    # Theme
    "furo>=2023.0.0",
    # Live reloading
    "sphinx-autobuild>=2023.0.0",
]

build = [
    # Binary distribution
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.0",
]

# HTTP API server for IDE integrations (VS Code, JetBrains, etc.)
# Usage: pip install victor-ai[api]
api = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "strawberry-graphql[fastapi]>=0.243",
]

# Checkpoint persistence with SQLite backend
# Usage: pip install victor-ai[checkpoints]
checkpoints = [
    "aiosqlite>=0.19",
]

# Google Gemini provider (using new google-genai SDK)
# Usage: pip install victor-ai[google]
google = [
    "google-genai>=1.0",
]

# Language-specific tree-sitter grammars (optional - install what you need)
# Usage: pip install victor-ai[lang-core] or pip install victor-ai[lang-all]
# lang-core: the 7 most common languages used by victor-coding's indexer
lang-core = [
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-cpp>=0.23",
]

lang-c = [
    "tree-sitter-c>=0.23",
]

lang-csharp = [
    "tree-sitter-c-sharp>=0.23",
]

lang-ruby = [
    "tree-sitter-ruby>=0.23",
]

lang-php = [
    "tree-sitter-php>=0.24",
]

lang-swift = [
    "tree-sitter-swift>=0.0.1",
]

lang-scala = [
    "tree-sitter-scala>=0.23",
]

lang-kotlin = [
    "tree-sitter-kotlin>=1.0",
]

lang-bash = [
    "tree-sitter-bash>=0.23",
]

lang-lua = [
    "tree-sitter-lua>=0.2",
]

lang-elixir = [
    "tree-sitter-elixir>=0.3",
]

lang-haskell = [
    "tree-sitter-haskell>=0.23",
]

lang-sql = [
    "tree-sitter-sql>=0.3",
]

lang-html = [
    "tree-sitter-html>=0.23",
]

lang-css = [
    "tree-sitter-css>=0.23",
]

lang-json = [
    "tree-sitter-json>=0.23",
]

lang-yaml = [
    "tree-sitter-yaml>=0.6",
]

lang-toml = [
    "tree-sitter-toml>=0.6",
]

lang-markdown = [
    "tree-sitter-markdown>=0.5",
]

lang-xml = [
    "tree-sitter-xml>=0.6",
]

# Language bundles for convenience
lang-web = [
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

lang-config = [
    "tree-sitter-json>=0.23",
    "tree-sitter-yaml>=0.6",
    "tree-sitter-toml>=0.6",
    "tree-sitter-xml>=0.6",
    "tree-sitter-markdown>=0.5",
]

lang-jvm = [
    "tree-sitter-scala>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-java>=0.23",
]

lang-systems = [
    "tree-sitter-c>=0.23",
    "tree-sitter-bash>=0.23",
    "tree-sitter-cpp>=0.23",
]

lang-apple = [
    "tree-sitter-swift>=0.0.1",
]

lang-dotnet = [
    "tree-sitter-c-sharp>=0.23",
]

lang-scripting = [
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.24",
    "tree-sitter-lua>=0.2",
]

lang-functional = [
    "tree-sitter-elixir>=0.3",
    "tree-sitter-haskell>=0.23",
    "tree-sitter-scala>=0.23",
]

lang-all = [
    # Core languages (previously in mandatory deps)
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-cpp>=0.23",
    # All additional language grammars
    "tree-sitter-c>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.24",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-scala>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-bash>=0.23",
    "tree-sitter-lua>=0.2",
    "tree-sitter-elixir>=0.3",
    "tree-sitter-haskell>=0.23",
    "tree-sitter-sql>=0.3",
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-yaml>=0.6",
    "tree-sitter-toml>=0.6",
    "tree-sitter-markdown>=0.5",
    "tree-sitter-xml>=0.6",
]

# Apple Silicon optimizations (optional)
apple-silicon = [
    "mlx-lm>=0.21.0",  # Apple's ML framework for LLMs
]

# Native Rust extensions for performance (optional)
# Build with: cd rust && maturin develop --release
native = [
    "maturin>=1.4",
]

# Extracted vertical packages (optional meta-extras for cross-repo installs)
coding = [
    "victor-coding>=0.6.0,<1.0.0",
    # Language grammars required by victor-coding's tree-sitter indexer
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-cpp>=0.23",
]

research = [
    "victor-research>=0.6.0,<1.0.0",
]

devops = [
    "victor-devops>=0.6.0,<1.0.0",
]

invest = [
    "victor-invest>=0.5.0,<1.0.0",
]

verticals = [
    "victor-coding>=0.6.0,<1.0.0",
    "victor-research>=0.6.0,<1.0.0",
    "victor-devops>=0.6.0,<1.0.0",
    "victor-invest>=0.5.0,<1.0.0",
]

all = [
    "victor-ai[dev,docs,build,lang-all,apple-silicon]",
]

[project.urls]
Homepage = "https://github.com/vijayksingh/victor"
Documentation = "https://github.com/vijayksingh/victor#readme"
Repository = "https://github.com/vijayksingh/victor"
Issues = "https://github.com/vijayksingh/victor/issues"

[project.scripts]
# Main CLI
victor = "victor.ui.cli:app"
vic = "victor.ui.cli:app"
victor-examples = "examples.playground.cli:app"

# Utility commands
victor-graph-warmup = "victor.tools.graph_warmup:main"
victor-reset-tool-stats = "victor.framework.rl.reset_tool_stats:main"
victor-prune-prompts = "victor.framework.rl.learners.prompt_history_pruner:main"
victor-metrics-export = "victor.integrations.api.metrics_exporter:main"
victor-mcp-server = "victor.integrations.mcp.server:main"

[project.entry-points."victor.plugins"]
# Built-in verticals (canonical registration)
benchmark = "victor.benchmark:plugin"

# =============================================================================
# External Vertical Registration (for third-party packages)
# =============================================================================
# Third-party packages can register custom verticals with Victor by defining
# an entry point in the "victor.plugins" group.
#
# Example in external package's pyproject.toml:
#
#   [project.entry-points."victor.plugins"]
#   security = "victor_security:plugin"
#   ml_ops = "victor_mlops.plugin:plugin"
#
# Requirements for external verticals:
#   1. Publish a VictorPlugin implementation under "victor.plugins"
#   2. The plugin should register SDK-authored vertical definitions via PluginContext
#   3. Vertical definitions should inherit from victor_sdk.VerticalBase
#   4. Runtime-only extensions/providers should be published through explicit extension groups
#
# Example plugin + vertical implementation:
#
#   from victor_sdk import VictorPlugin, PluginContext, VerticalBase, ToolNames
#
#   class SecurityAssistant(VerticalBase):
#       name = "security"
#       description = "Security vulnerability analysis assistant"
#
#       @classmethod
#       def get_name(cls):
#           return cls.name
#
#       @classmethod
#       def get_description(cls):
#           return cls.description
#
#       @classmethod
#       def get_tools(cls):
#           return [ToolNames.READ, ToolNames.GREP, "security_scan", "dependency_audit"]
#
#       @classmethod
#       def get_system_prompt(cls):
#           return "You are a security expert..."
#
#   class SecurityPlugin(VictorPlugin):
#       @property
#       def name(self):
#           return "security"
#
#       def register(self, context: PluginContext) -> None:
#           context.register_vertical(SecurityAssistant)
#
#   plugin = SecurityPlugin()
#
# Victor discovers plugins lazily via "victor.plugins" and resolves their
# registered verticals at runtime.
# =============================================================================

# =============================================================================
# Skill Registration (for verticals and third-party packages)
# =============================================================================
# Skills are composable units of expertise that bind prompts + tools.
# Verticals and external packages can register skills via entry points:
#
#   [project.entry-points."victor.skills"]
#   debug = "my_package.skills:debug_skill"
#   refactor = "my_package.skills:refactor_skill"
#
# Each entry point should resolve to a SkillDefinition instance or a
# callable returning one or a list of SkillDefinition objects.
# =============================================================================
[project.entry-points."victor.skills"]
# Built-in skills will be registered here as they are created

[tool.setuptools.packages.find]
include = ["victor", "victor.*"]
exclude = ["tests*", "docs*", "victor_test*"]

# Ensure verticals.contrib packages are included
namespaces = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Ensure workflow/config assets are available in wheel installs.
victor = [
    "config/*.yaml",
    "config/*.yml",
    "config/*.json",
    "verticals/contrib/*/*.yaml",
    "verticals/contrib/*/*.toml",
    "verticals/contrib/*/*.svg",
    "verticals/contrib/*/workflows/*.yaml",
    "verticals/contrib/*/workflows/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=victor",
    "--cov-report=",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "workflows: marks workflow-related tests",
    "agents: marks multi-agent tests",
    "hitl: marks human-in-the-loop tests",
]
filterwarnings = [
    # Ignore PytestCollectionWarning for non-test classes in victor module
    # These are data classes/enums that happen to start with "Test" (e.g., TestResult, TestRunner)
    "ignore:cannot collect test class.*because it has a __init__ constructor:pytest.PytestCollectionWarning",
    # Ignore semaphore leak warnings from multiprocessing (common in test cleanup)
    # These come from dependencies like ChromaDB, sentence_transformers
    "ignore:.*semaphore.*:ResourceWarning",
    "ignore:.*leaked.*semaphore.*:UserWarning",
    # Ignore multiprocessing resource tracker warnings
    "ignore:.*resource_tracker.*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "archive",
    "examples",
    "docker/demos",
    "victor_test",
    "demo_workspace",
    "src",
    "ui",
    "web/ui",
    "htmlcov",
    "venv",
    "game_app.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file (sometimes necessary)
    "F401",  # unused imports (often intentional re-exports)
    "F811",  # redefined while unused (type imports shadowing runtime)
    "B007",  # loop control variable not used within loop body
    "B008",  # do not perform function calls in argument defaults
    "B019",  # lru_cache on methods (valid pattern for class methods)
    "B023",  # function uses loop variable (common pattern)
    "B024",  # abstract class with no abstract methods (valid for protocols)
    "B025",  # try-except with empty except clause (handled elsewhere)
    "B904",  # allow broad HTTPException raising for now
    "B905",  # zip() without strict= parameter (not critical)
    "C401",  # unnecessary generator (minor optimization)
    "C414",  # unnecessary list/set call (minor optimization)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = [
    "B017",  # assert blind exception (common in test assertions)
    "B018",  # useless expression (for test assertions)
    "E741",  # ambiguous variable name (common in test fixtures)
    "F841",  # unused local variable (often for side-effect testing)
]

[tool.mypy]
python_version = "3.10"
# Type checking configuration - M3: Global strict mode enabled (2026-03-10)
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "^archive/",
    "^vscode-victor/",
    "^tests/",
    "^scripts/",
]
files = ["victor"]

# Strict modules milestone tracking (M1-M3)
# M1 baseline (2026-03-10): 6 modules
# M1 expansion (2026-03-10): +5 modules (total 11)
# M2 expansion (2026-03-10): +4 modules (total 15)
# M3 achievement (2026-03-10): Global strict enabled
[[tool.mypy.overrides]]
module = [
    # These modules paved the way for global strict adoption
    # M1 baseline
    "victor.config.*",
    "victor.storage.cache.*",
    "victor.telemetry.*",
    "victor.analytics.*",
    "victor.profiler.*",
    "victor.debug.*",
    # M1 expansion (2026-03-10)
    "victor.agent.services.*",
    "victor.core.container",
    "victor.core.protocols",
    "victor.providers.base",
    "victor.framework.*",
    # M2 expansion (2026-03-10)
    "victor.state.*",
    "victor.workflows.*",
    "victor.teams.*",
    "victor.integrations.api.*",
]
# Note: These modules now inherit strict=true from global config
# Keeping this override for documentation and milestone tracking

# M4: Technical debt remediation in progress (2026-03-11)
# Modules verified as type-safe (removed from ignore_errors):
[[tool.mypy.overrides]]
module = [
    # Verified type-safe in M4
    "victor.providers.*",  # 41 files
    "victor.codebase.*",  # victor/contrib/codebase: 5, victor/verticals/contrib/coding/codebase: 20
    "victor.tools.*",  # 86 files - Fixed 74 errors in language_analyzer.py
    "victor.mcp.*",  # victor/integrations/mcp: 6 files
    "victor.agent.*",  # 253 files
    "victor.native.*",  # 16 files
    "victor.verticals.*",  # 185 files
    "victor.evaluation.*",  # 37 files
    "victor.protocols.*",  # 12 files
    "victor.embeddings.*",  # victor/contrib/embeddings: 2, victor/storage/embeddings: 6
    "victor.observability.*",  # 52 files
    "victor.context.*",  # 6 files
    "victor.ui.*",  # 73 files - Fixed 2 errors in init.py
]

# Deferred explicit overrides from stash audit (2026-03-28):
# These targets still fail current mypy validation and must remain covered
# by the catch-all ignore block until their type debt is resolved.
# - victor.verticals.contrib.coding.tools.graph_tool
# - victor.verticals.contrib.coding.tools.language_analyzer
# - victor.agent.orchestrator
# - victor.processing.native.*
# - victor.observability.dashboard.app

# Remaining modules requiring type fixes
[[tool.mypy.overrides]]
module = [
    "victor.api.*",  # Doesn't exist at top level
    "victor.protocol.*",  # Doesn't exist (victor.protocols is type-safe)
    "victor.*",  # Catch-all for remaining untyped modules
]
ignore_errors = true

# M4 Status Summary (2026-03-11):
# - Removed ignore_errors for 13 modules (946 files)
# - Fixed 76 type errors:
#   * 74 in language_analyzer.py
#   * 2 in ui/commands/init.py
# - All major modules now verified type-safe
# - Remaining: Catch-all for any new/unvisited modules

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.coverage.run]
source = ["victor"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    # CLI modules require interactive terminal testing
    "victor/ui/cli.py",
    "victor/ui/commands.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
