[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "victor-rag"
version = "0.7.0"
description = "RAG vertical for Victor AI - Document ingestion, vector search, and knowledge management"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
maintainers = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
keywords = [
    "victor",
    "vertical",
    "rag",
    "retrieval-augmented-generation",
    "vector-search",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]
dependencies = [
    "victor-sdk>=0.7.0,<1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
runtime = [
    # victor-ai runtime support - optional, SDK-first architecture
    # "victor-ai>=0.6.0,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black==26.1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vjsingh1984/victor-rag"
Repository = "https://github.com/vjsingh1984/victor-rag"
Documentation = "https://docs.victor.dev/verticals/rag"
Issues = "https://github.com/vjsingh1984/victor-rag/issues"

[project.entry-points."victor.plugins"]
rag = "victor_rag.plugin:plugin"

[project.entry-points."victor.framework.teams.providers"]
rag = "victor_rag.teams:RAGTeamSpecProvider"

# NEW: Victor SDK Protocol implementations
[project.entry-points."victor.sdk.protocols"]
rag-tools = "victor_rag.protocols:RAGToolProvider"
rag-safety = "victor_rag.protocols:RAGSafetyProvider"
rag-prompts = "victor_rag.protocols:RAGPromptProvider"
rag-workflows = "victor_rag.protocols:RAGWorkflowProvider"

[tool.setuptools]
packages = [
    "victor_rag",
    "victor_rag.tools",
    "victor_rag.ui",
    "victor_rag.workflows",
    "victor_rag.teams",
    "victor_rag.rl",
]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

[tool.ruff]
line-length = 100
select = [
    "E",
    "W",
    "F",
    "B",
    "C4",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
