# Copyright 2025 Vijaykumar Singh <singhvjd@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "victor_native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance native extensions for Victor AI coding assistant"
authors = ["Vijaykumar Singh <singhvjd@gmail.com>"]
readme = "README.md"

[lib]
name = "victor_native"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Fast hashing
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# SIMD operations (portable across architectures)
wide = "0.7"

# JSON parsing for repair
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# YAML parsing for workflow acceleration
serde_yaml = "0.9"

# Parallel processing
rayon = "1.10"

# Memory-efficient collections
smallvec = "1.13"

# Multi-pattern matching (Aho-Corasick algorithm)
aho-corasick = "1.1"

# LRU cache for memoization
lru = "0.12"

# Fast synchronization primitives
parking_lot = "0.12"

# Regex for pattern compilation (optional fallback)
regex = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = []
# Enable SIMD optimizations (auto-detected at runtime)
simd = []
